# ci-training-cmake

./: ATest.cpp  CMakeLists.txt
A/: CMakeLists.txt
A/B/: CMakeLists.txt
C/: CMakeLists.txt
D/: CMakeLists.txt
H/: CMakeLists.txt
